--- a/hello-world.html
+++ b/hello-world.html
@@ -9,6 +9,15 @@
 <header><!-- semantisk HTML: sidehovedet-->
   <h1>Hello world!</h1>
 </header>
+	
+	<!--Navigation-->
+	<nav>
+	<a href="index.html">Home</a>
+	<a href="hello-world.html">Hello world</a>
+	<a href="//www.cphbusiness.dk" target="_blank">My School</a>
+	</nav>
+	
+	
 <section>
   <h2>Section 1</h2>
   <article>
