--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <header>
   <h1>Introduction to HTML</h1>
 </header>
+	
+	<!--Navigation-->
+<nav>
+	<a href="index.html">Home</a>
+	<a href="hello-world.html">Hello world</a>
+	<a href="//www.cphbusiness.dk" target="_blank">My School</a>
+</nav>
+	
+	
 <section>
   <h2>What is HTML 5?</h2>
   <article>
@@ -18,15 +27,10 @@
     <p>HTML is the "mother tongue" of your browser. To make a long story short, HTML was invented in 1990 by a scientist called
       <mark>Tim Berners-Lee</mark>
       . The purpose was to make it easier for scientists at different universities to 	gain access to each other's research documents. The project became a bigger success than Tim Berners-Lee had ever imagined. By inventing HTML he laid the foundation for the web as we know it today.</p>
-<<<<<<< HEAD
-	  <figure><img src="images/Tim-Berners-Lee" width="800" height="533" alt="Portrait of Tim Berners Lee"/><figcaption>Tim Berners Lee - The inventor of the World Wide Web</figcaption></figure>
-
-	
+	  
+ <figure> <img src="images/Tim-Berners-Lee" width="800" height="533" alt=""/><figcaption>Tim Berners Lee - The inventor of the World Wide Web</figcaption></figure>
+	  
 <aside> By the way: HTML is an abbreviation of "HyperText Mark-up Language". </aside>
-=======
-    <figure><img src="images/tim-berners-lee.jpg" width="800" height="533" alt="Portrait of Tim Berners Lee"/><figcaption>Tim Berners Lee - The inventor of the World Wide Web</figcaption></figure>
-    <aside> By the way: HTML is an abbreviation of "HyperText Mark-up Language". </aside>
->>>>>>> origin/master
   </article>
   <article>
     <h3>HTML: The foundation of all websites</h3>
