--- a/Tabels.html
+++ b/Tabels.html
@@ -10,15 +10,13 @@
 		
 	<table border="1" width="800">
   <caption>The animal table</caption>
-		</tabel>
+	
 
 	<tbody>
 	
     <tr>
       <td colspan="3"><table border="1" width="800"> <caption>
-  <strong>Predatory animals</strong>
-  </caption>
-	</td>
+		  <strong>Predatory animals</strong></caption></td>
 		  
     </tr>
 	  
@@ -34,7 +32,8 @@
     <tr>
       <td>Brown bear</td>
       <td><em>Ursus arctos</em></td>
-      <td><figure><img src="Brown bear.png" width="200" height="150" alt=""/><figcaption>Brown bear</figcaption></figure></td>
+      <td><figure><img src="images/Brown bear.png" width="200" height="150" alt="Brown bear"/>
+      <figcaption>Brown bear</figcaption></figure></td>
     </tr>
 	  
 	  <!--Spalte 2: Badger-->
@@ -42,7 +41,8 @@
     <tr>
       <td>Badger</td>
       <td><em>Meles meles</em></td>
-      <td><figure><img src="Badger.png" width="200" height="150" alt=""/><figcaption>Badger</figcaption></figure></td>
+      <td><figure><img src="images/Badger.png" width="200" height="150" alt="Badger"/>
+      <figcaption>Badger</figcaption></figure></td>
     </tr>
 	  
 	  <!--Spalte 3: Fox-->
@@ -50,7 +50,8 @@
 	<tr>
       <td>Fox</td>
       <td><em>Vulpes Vulpes</em></td>
-      <td><figure><img src="Billede1.png" width="200" height="150" alt=""/><figcaption>Fox</figcaption></figure></td>
+      <td><figure><img src="images/Billede1.png" width="200" height="150" alt="Fox"/>
+      <figcaption>Fox</figcaption></figure></td>
     </tr> 
 	  
 	  <!--Spalte 4: Sand cat-->
@@ -58,14 +59,15 @@
 	  <tr>
       <td>Sand cat</td>
       <td><em>Felis margarita</em></td>
-      <td><figure><img src="Sand cat.png" width="200" height="150" alt=""/><figcaption>Sand cat</figcaption></figure></td>
+      <td><figure><img src="images/Sand cat.png" width="200" height="150" alt="Sand cat"/>
+        <figcaption>Sand cat</figcaption></figure></td>
     </tr> 
 	  
 	  <!--Spanlte 5: Wild cat-->
 	  <tr>
       <td>Wild cat</td>
       <td><em>Felis silvestris</em></td>
-      <td><figure><img src="Wild cat.png" width="200" height="150" alt=""/>
+      <td><figure><img src="images/Wild cat.png" width="200" height="150" alt="Wild cat"/>
         <figcaption>Wild cat</figcaption></figure></td>
     </tr> 
 	  
@@ -73,8 +75,8 @@
 	  <tr>
       <td>Wolf</td>
       <td><em>Canis lupus</em></td>
-      <td><figure><img src="Wolf.png" width="200" height="150" alt=""/>
-        <figcaption>Wolf</figcaption></figure></td>
+      <td><figure><img src="images/Wolf.png" width="200" height="150" alt="Wolf"/>
+	<figcaption>Wolf</figcaption></figure></td>
     </tr> 
 	  
 	  <!--Spalte 7: Link-->
