--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   <h1>Introduction to HTML</h1>
 </header>
 	
-	<!--Navigation-->
+<!--Navigation-->
 <nav>
-	<a href="index.html">Home</a>
-	<a href="hello-world.html">Hello world</a>
+	<a href="../index.html">Home</a>
+	<a href="pages/hello-world.html">Hello World</a>
 	<a href="//www.cphbusiness.dk" target="_blank">My School</a>
+	<a href="pages/The animal table (undervisning).html">The animal table</a>
+	<a href="pages/contact.html">Contact</a>
 </nav>
 	
 	
