--- a/pages/The animal table (undervisning).html
+++ b/pages/The animal table (undervisning).html
@@ -3,10 +3,40 @@
 <head>
 <meta charset="utf-8">
 <title>Tables</title>
+	
+	<!-- HTLM kommentar -->
+	
+	<style>
+	/* CSS embedded style */
+		/*CSS selector : HTML elemtet table*/
+		tabele { 
+		/* property + value*/
+			
+			width: 800px;
+			border-collapse: collapse;
+			border: 1px solid black;
+			
+		}
+		th, td{ border: 1px solid black;
+			padding: 10px;
+			
+		}
+	</style>
 </head>
 
+	<!--Navigation-->
+<nav>
+	<a href="../index.html">Home</a>
+	<a href="hello-world.html">Hello world</a>
+	<a href="//www.cphbusiness.dk" target="_blank">My School</a>
+	<a href="The animal table (undervisning).html">The animal table</a>
+	<a href="contact.html">Contact</a>
+</nav>
+	
+	
+	
 <body>
-<table width="800" border="1">
+<table>
   <caption>
   The animal table
   </caption>
@@ -22,41 +52,42 @@
     <tr>
       <td>Brown bear</td>
       <td><em>Ursus arctos</em></td>
-      <td><figure><img src="images/Brown bear.png" width="218" height="154" alt="Brown bear"/>
+      <td><figure><img src="../images/Brownbear.png" width="218" height="154" alt="Brown bear"/>
           <figcaption>Brown bear</figcaption>
         </figure></td>
     </tr>
     <tr>
       <td>Badger</td>
       <td><em>Meles meles</em></td>
-      <td><figure><img src="images/Badger.png" width="204" height="154" alt="Badger"/>
+      <td><figure><img src="../images/Badger.png" width="204" height="154" alt="Badger"/>
           <figcaption>Badger</figcaption>
         </figure></td>
     </tr>
     <tr>
       <td>Fox</td>
       <td><em>Vulpes Vulpes</em></td>
-      <td><figure><img src="images/Billede1.png" width="231" height="154" alt="Fox"/>
+      <td><figure><img src="../images/Fox.png" width="231" height="154" alt="Fox"/>
           <figcaption>Fox</figcaption>
         </figure></td>
     </tr>
     <tr>
       <td>Sand cat</td>
       <td><em>Felis margarita</em></td>
-      <td><figure><img src="images/Sand cat.png" width="231" height="154" alt="Sand cat"/>
+      <td><figure><img src="../images/Sandcat.png" width="231" height="154" alt="Sand cat"/>
           <figcaption>Sand cat</figcaption>
         </figure></td>
     </tr>
     <tr>
       <td>Wild cat</td>
       <td><em>Felis silvestris</em></td>
-      <td><figure><img src="images/Wild cat.png" width="189" height="154" alt="Wild cat"/>
+      <td><figure><img src="../images/Wildcat.png" width="189" height="154" alt="Wild cat"/>
           <figcaption>Wild cat</figcaption>
         </figure></td>
-		<tr>
+    </tr>
+    <tr>
       <td>Wolf</td>
       <td><em>Canis lupus</em></td>
-      <td><figure><img src="images/Wolf.png" width="231" height="154" alt=""/>
+      <td><figure><img src="../images/Wolf.png" width="231" height="154" alt=""/>
           <figcaption>Wolf</figcaption>
         </figure></td>
     </tr>
