--- a/afleveringer/Tabels.html
+++ b/afleveringer/Tabels.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Tables</title>
@@ -15,9 +15,7 @@
 	<tbody>
 	
     <tr>
-      <td colspan="3"><table border="1" width="800"> <caption>
-		  <strong>Predatory animals</strong></caption></td>
-		  
+		<th scope="colgroup" colspan="3">Predatory animals</th>  
     </tr>
 	  
 	  <!--Kollonne overskrift-->
@@ -32,7 +30,7 @@
     <tr>
       <td>Brown bear</td>
       <td><em>Ursus arctos</em></td>
-      <td><figure><img src="images/Brown bear.png" width="200" height="150" alt="Brown bear"/>
+      <td><figure><img src="../images/Brown bear.png" width="200" height="150" alt="Brown bear"/>
       <figcaption>Brown bear</figcaption></figure></td>
     </tr>
 	  
@@ -41,7 +39,7 @@
     <tr>
       <td>Badger</td>
       <td><em>Meles meles</em></td>
-      <td><figure><img src="images/Badger.png" width="200" height="150" alt="Badger"/>
+      <td><figure><img src="../images/Badger.png" width="200" height="150" alt="Badger"/>
       <figcaption>Badger</figcaption></figure></td>
     </tr>
 	  
@@ -50,7 +48,7 @@
 	<tr>
       <td>Fox</td>
       <td><em>Vulpes Vulpes</em></td>
-      <td><figure><img src="images/Billede1.png" width="200" height="150" alt="Fox"/>
+      <td><figure><img src="../images/Billede1.png" width="200" height="150" alt="Fox"/>
       <figcaption>Fox</figcaption></figure></td>
     </tr> 
 	  
@@ -59,7 +57,7 @@
 	  <tr>
       <td>Sand cat</td>
       <td><em>Felis margarita</em></td>
-      <td><figure><img src="images/Sand cat.png" width="200" height="150" alt="Sand cat"/>
+      <td><figure><img src="../images/Sand cat.png" width="200" height="150" alt="Sand cat"/>
         <figcaption>Sand cat</figcaption></figure></td>
     </tr> 
 	  
@@ -67,7 +65,7 @@
 	  <tr>
       <td>Wild cat</td>
       <td><em>Felis silvestris</em></td>
-      <td><figure><img src="images/Wild cat.png" width="200" height="150" alt="Wild cat"/>
+      <td><figure><img src="../images/Wild cat.png" width="200" height="150" alt="Wild cat"/>
         <figcaption>Wild cat</figcaption></figure></td>
     </tr> 
 	  
@@ -75,7 +73,7 @@
 	  <tr>
       <td>Wolf</td>
       <td><em>Canis lupus</em></td>
-      <td><figure><img src="images/Wolf.png" width="200" height="150" alt="Wolf"/>
+      <td><figure><img src="../images/Wolf.png" width="200" height="150" alt="Wolf"/>
 	<figcaption>Wolf</figcaption></figure></td>
     </tr> 
 	  
