--- a/pages/hello-world.html
+++ b/pages/hello-world.html
@@ -10,13 +10,14 @@
   <h1>Hello world!</h1>
 </header>
 	
-	<!--Navigation-->
-	<nav>
-	<a href="index.html">Home</a>
+<!--Navigation-->
+<nav>
+	<a href="../index.html">Home</a>
 	<a href="hello-world.html">Hello world</a>
 	<a href="//www.cphbusiness.dk" target="_blank">My School</a>
-	</nav>
-	
+	<a href="The animal table (undervisning).html">The animal table</a>
+	<a href="contact.html">Contact</a>
+</nav>
 	
 <section>
   <h2>Section 1</h2>
