--- a/pages/The animal table (undervisning).html
+++ b/pages/The animal table (undervisning).html
@@ -24,6 +24,18 @@
 	</style>
 </head>
 
+	
+	
+	
+<body>
+	<caption>
+  <header><!-- semantisk HTML: sidehovedet-->
+  <h1>The animal table </h1>
+</header>
+	
+  </caption>
+<table>
+  
 	<!--Navigation-->
 <nav>
 	<a href="../index.html">Home</a>
@@ -33,14 +45,8 @@
 	<a href="contact.html">Contact</a>
 </nav>
 	
-	
-	
-<body>
-<table>
-  <caption>
-  The animal table
-  </caption>
   <tbody>
+	  
     <tr>
       <th scope="colgroup" colspan="3">Predatory animals</th>
     </tr>
