--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,15 @@
 <meta charset="UTF-8">
 <title>contact</title>
 </head>
-	<!--Navigation-->
+
+	
+	
+<body>
+	<header><!-- semantisk HTML: sidehovedet-->
+  <h1>Contact</h1>
+</header>
+	
+		<!--Navigation-->
 <nav>
 	<a href="../index.html">Home</a>
 	<a href="hello-world.html">Hello world</a>
@@ -13,7 +21,6 @@
 	<a href="contact.html">Contact</a>
 </nav>
 	
-	
-<body>
 </body>
+	
 </html>
